--- a/SimpleWeather.UWP.Shared/Strings/nl/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/nl/Resources.resw
@@ -130,6 +130,24 @@
   <data name="key_hint" xml:space="preserve">
     <value>Sleutel weeraanbieder</value>
   </data>
+  <data name="api_here" xml:space="preserve">
+    <value>HERE Weather</value>
+  </data>
+  <data name="api_metno" xml:space="preserve">
+    <value>MET Norway</value>
+  </data>
+  <data name="api_owm" xml:space="preserve">
+    <value>OpenWeatherMap</value>
+  </data>
+  <data name="api_lociq" xml:space="preserve">
+    <value>LocationIQ</value>
+  </data>
+  <data name="api_nws" xml:space="preserve">
+    <value>U.S. National Weather Service</value>
+  </data>
+  <data name="api_waqi" xml:space="preserve">
+    <value>World Air Quality Index Project</value>
+  </data>
   <data name="label_gpsfollow" xml:space="preserve">
     <value>Huidige locatie</value>
   </data>
@@ -590,6 +608,9 @@
   <data name="pref_title_feature_charts" xml:space="preserve">
     <value>Grafieken</value>
   </data>
+  <data name="api_wunlocked" xml:space="preserve">
+    <value>WeatherUnlocked</value>
+  </data>
   <data name="refresh_30min" xml:space="preserve">
     <value>30 minuten</value>
   </data>
@@ -621,6 +642,9 @@
   </data>
   <data name="Msg_BGAccessDeniedSettings" xml:space="preserve">
     <value>Achtergrond toegang geweigerd. Inschakelen onder Instellingen.</value>
+  </data>
+  <data name="api_weatherapi" xml:space="preserve">
+    <value>WeatherAPI.com</value>
   </data>
   <data name="label_pollen_count" xml:space="preserve">
     <value>Pollen telling</value>
@@ -666,5 +690,8 @@ Fuzzy</comment>
   </data>
   <data name="time_current" xml:space="preserve">
     <value>Huidige</value>
+  </data>
+  <data name="api_tomorrowio" xml:space="preserve">
+    <value>Tomorrow.io</value>
   </data>
 </root>
