Weather: add support for WeatherBit.io

--- a/SimpleWeather.UWP.Shared/Strings/en/Config.resw
+++ b/SimpleWeather.UWP.Shared/Strings/en/Config.resw
@@ -176,6 +176,13 @@
         "newWeatherSource": ""
 }</value>
   </data>
+  <data name="weatherbitio" xml:space="preserve">
+    <value>{
+        "enabled": true,
+        "locSource": "Bing",
+        "newWeatherSource": ""
+}</value>
+  </data>
   <data name="wunlocked" xml:space="preserve">
     <value>{
         "enabled": true,
