--- a/SimpleWeather.UWP.Shared/Strings/en/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/en/Resources.resw
@@ -693,4 +693,10 @@
   <data name="api_tomorrowio" xml:space="preserve">
     <value>Tomorrow.io</value>
   </data>
+  <data name="precipitation_minutely_starting_text_format" xml:space="preserve">
+    <value>Rain will start in about %1$s</value>
+  </data>
+  <data name="precipitation_minutely_stopping_text_format" xml:space="preserve">
+    <value>Rain will stop in about %1$s</value>
+  </data>
 </root>
