--- a/SimpleWeather.UWP.Shared/Strings/zh-Hans/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/zh-Hans/Resources.resw
@@ -225,10 +225,10 @@
     <value>云量</value>
   </data>
   <data name="label_qpf_rain" xml:space="preserve">
-    <value>降雨量</value>
+    <value>雨量</value>
   </data>
   <data name="label_qpf_snow" xml:space="preserve">
-    <value>降雪量</value>
+    <value>雪量</value>
   </data>
   <data name="credit_prefix" xml:space="preserve">
     <value>数据来自</value>
@@ -298,7 +298,7 @@
     <value>恶劣天气预警</value>
   </data>
   <data name="pref_title_general" xml:space="preserve">
-    <value>总体</value>
+    <value>设置</value>
     <comment>Settings</comment>
   </data>
   <data name="pref_title_units" xml:space="preserve">
@@ -422,7 +422,6 @@
   </data>
   <data name="datetime_validuntil" xml:space="preserve">
     <value>有效期至</value>
-    <comment>Fuzzy</comment>
   </data>
   <data name="pref_summary_personalkey" xml:space="preserve">
     <value>使用个人密钥</value>
@@ -524,10 +523,10 @@
     <value>刷新</value>
   </data>
   <data name="Label_Pin.Text" xml:space="preserve">
-    <value>固定到开始</value>
+    <value>固定到顶部</value>
   </data>
   <data name="Label_Unpin.Text" xml:space="preserve">
-    <value>取消固定以开始</value>
+    <value>取消固定到顶部</value>
     <comment>Fuzzy</comment>
   </data>
   <data name="ConfirmDialog.PrimaryButtonText" xml:space="preserve">
@@ -540,14 +539,14 @@
     <value>功能</value>
   </data>
   <data name="Pref_Features_Subtitle.Text" xml:space="preserve">
-    <value>选择要启用/禁用的功能：</value>
+    <value>选择要启用 / 禁用的功能：</value>
     <comment>Fuzzy</comment>
   </data>
   <data name="Pref_Features_Title.Text" xml:space="preserve">
     <value>功能</value>
   </data>
   <data name="label_series" xml:space="preserve">
-    <value>系列</value>
+    <value>曲线</value>
     <comment>LineView</comment>
   </data>
   <data name="label_windgust" xml:space="preserve">
@@ -581,7 +580,7 @@
     <comment>Feedback</comment>
   </data>
   <data name="pref_title_rateandreview" xml:space="preserve">
-    <value>打分和评论</value>
+    <value>评分 / 评论</value>
     <comment>Rate / Review
 Fuzzy</comment>
   </data>
@@ -608,7 +607,7 @@ Fuzzy</comment>
     <value>°C, km/h, mm, mb, km</value>
   </data>
   <data name="FeatureOption_TileBackground.Content" xml:space="preserve">
-    <value>瓷砖背景图片</value>
+    <value>磁贴背景图片</value>
     <comment>Fuzzy</comment>
   </data>
   <data name="pref_title_icons" xml:space="preserve">
@@ -632,7 +631,7 @@ Fuzzy</comment>
 Fuzzy</comment>
   </data>
   <data name="pref_title_time" xml:space="preserve">
-    <value>世界</value>
+    <value>时间</value>
   </data>
   <data name="not_channel_name_precipnotification" xml:space="preserve">
     <value>降水通知</value>
@@ -643,12 +642,12 @@ Fuzzy</comment>
     <value>天</value>
   </data>
   <data name="Precipitation_Text_Format" xml:space="preserve">
-    <value>{1}内有{0}%的机会下雨</value>
+    <value>{1}内有{0}%的可能会下雨</value>
     <comment>{0} = Percentage; {1} = time in hours/minutes
 Fuzzy</comment>
   </data>
   <data name="Precipitation_NextHour_Text_Format" xml:space="preserve">
-    <value>未来一小时内有{0}%的机会下雨</value>
+    <value>未来一小时内有{0}%的可能会下雨</value>
     <comment>{0} = Percentage
 Fuzzy</comment>
   </data>
@@ -658,7 +657,7 @@ Fuzzy</comment>
 Fuzzy</comment>
   </data>
   <data name="Msg_BGAccessDeniedSettings" xml:space="preserve">
-    <value>后台访问被拒绝。 请在设置中启用。</value>
+    <value>后台访问被拒绝，请在设置中启用。</value>
     <comment>Fuzzy</comment>
   </data>
   <data name="api_weatherapi" xml:space="preserve">
@@ -704,7 +703,7 @@ Fuzzy</comment>
     <value>Dev Settings</value>
   </data>
   <data name="prompt_location_not_set" xml:space="preserve">
-    <value>未设置位置。 请添加位置</value>
+    <value>未设置位置，请添加位置</value>
     <comment>Fuzzy</comment>
   </data>
   <data name="time_current" xml:space="preserve">
@@ -713,5 +712,12 @@ Fuzzy</comment>
   </data>
   <data name="api_tomorrowio" xml:space="preserve">
     <value>Tomorrow.io</value>
+  </data>
+  <data name="precipitation_minutely_starting_text_format" xml:space="preserve">
+    <value>大约%1$s后将开始下雨</value>
+    <comment>Fuzzy</comment>
+  </data>
+  <data name="precipitation_minutely_stopping_text_format" xml:space="preserve">
+    <value>雨将在大约%1$s后停止</value>
   </data>
 </root>
