--- a/SimpleWeather.UWP.Shared/Strings/en/WeatherConditions.resw
+++ b/SimpleWeather.UWP.Shared/Strings/en/WeatherConditions.resw
@@ -251,4 +251,13 @@
   <data name="weather_heavyrain" xml:space="preserve">
     <value>Heavy rain</value>
   </data>
+  <data name="weather_mostlyclear" xml:space="preserve">
+    <value>Mostly Clear</value>
+  </data>
+  <data name="weather_lightfog" xml:space="preserve">
+    <value>Light Fog</value>
+  </data>
+  <data name="weather_drizzle" xml:space="preserve">
+    <value>Drizzle</value>
+  </data>
 </root>
