--- a/SimpleWeather.UWP.Shared/Strings/es/WeatherConditions.resw
+++ b/SimpleWeather.UWP.Shared/Strings/es/WeatherConditions.resw
@@ -257,4 +257,15 @@
   <data name="weather_heavyrain" xml:space="preserve">
     <value>Lluvias fuertes</value>
   </data>
+  <data name="weather_mostlyclear" xml:space="preserve">
+    <value>Principalmente claro</value>
+  </data>
+  <data name="weather_lightfog" xml:space="preserve">
+    <value>Ligera niebla</value>
+    <comment>Fuzzy</comment>
+  </data>
+  <data name="weather_drizzle" xml:space="preserve">
+    <value>Llovizna</value>
+    <comment>Fuzzy</comment>
+  </data>
 </root>
