PoPChanceNotificationHelper: use minutely forecast where possible
* If minutely forecast is available, use it to create rain notification (for when rain starts or when ends)
* Fallback to % chance if minutely is not available

--- a/SimpleWeather.UWP.Shared/Strings/es/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/es/Resources.resw
@@ -710,10 +710,10 @@ Fuzzy</comment>
   <data name="api_tomorrowio" xml:space="preserve">
     <value>Tomorrow.io</value>
   </data>
-  <data name="precipitation_minutely_starting_text_format" xml:space="preserve">
-    <value>La lluvia comenzará en unos %1$s</value>
+  <data name="Precipitation_Minutely_Starting_Text_Format" xml:space="preserve">
+    <value>La lluvia comenzará en unos {0}</value>
   </data>
-  <data name="precipitation_minutely_stopping_text_format" xml:space="preserve">
-    <value>La lluvia cesará en unos %1$s</value>
+  <data name="Precipitation_Minutely_Stopping_Text_Format" xml:space="preserve">
+    <value>La lluvia cesará en unos {0}</value>
   </data>
 </root>
