--- a/SimpleWeather.UWP.Shared/Strings/de/WeatherConditions.resw
+++ b/SimpleWeather.UWP.Shared/Strings/de/WeatherConditions.resw
@@ -279,4 +279,10 @@ Fuzzy</comment>
   <data name="weather_drizzle" xml:space="preserve">
     <value>Nieselregen</value>
   </data>
+  <data name="weather_lightwind" xml:space="preserve">
+    <value>Leichter Wind</value>
+  </data>
+  <data name="weather_smog" xml:space="preserve">
+    <value>Smog</value>
+  </data>
 </root>
