--- a/SimpleWeather.UWP.Shared/Strings/en/WeatherConditions.resw
+++ b/SimpleWeather.UWP.Shared/Strings/en/WeatherConditions.resw
@@ -260,4 +260,10 @@
   <data name="weather_drizzle" xml:space="preserve">
     <value>Drizzle</value>
   </data>
+  <data name="weather_lightwind" xml:space="preserve">
+    <value>Light Wind</value>
+  </data>
+  <data name="weather_smog" xml:space="preserve">
+    <value>Smog</value>
+  </data>
 </root>
