--- a/SimpleWeather.UWP.Shared/Strings/nl/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/nl/Resources.resw
@@ -700,4 +700,17 @@ Fuzzy</comment>
   <data name="Precipitation_Minutely_Stopping_Text_Format" xml:space="preserve">
     <value>Regen zal stoppen in ongeveer {0}</value>
   </data>
+  <data name="hint_appid" xml:space="preserve">
+    <value>App ID</value>
+    <comment>Credentials</comment>
+  </data>
+  <data name="hint_appcode" xml:space="preserve">
+    <value>App Code/Key</value>
+  </data>
+  <data name="hint_username" xml:space="preserve">
+    <value>Gebruikersnaam</value>
+  </data>
+  <data name="hint_password" xml:space="preserve">
+    <value>Wachtwoord</value>
+  </data>
 </root>
