--- a/SimpleWeather.UWP.Shared/Strings/sk/WeatherConditions.resw
+++ b/SimpleWeather.UWP.Shared/Strings/sk/WeatherConditions.resw
@@ -261,4 +261,10 @@
   <data name="weather_drizzle" xml:space="preserve">
     <value>Mrholenie</value>
   </data>
+  <data name="weather_lightwind" xml:space="preserve">
+    <value>Ľahký vietor</value>
+  </data>
+  <data name="weather_smog" xml:space="preserve">
+    <value>Smog</value>
+  </data>
 </root>
