--- a/SimpleWeather.UWP.Shared/Strings/zh-Hans/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/zh-Hans/Resources.resw
@@ -719,4 +719,17 @@ Fuzzy</comment>
   <data name="Precipitation_Minutely_Stopping_Text_Format" xml:space="preserve">
     <value>雨将在大约{0}后停止</value>
   </data>
+  <data name="hint_appid" xml:space="preserve">
+    <value>App ID</value>
+    <comment>Credentials</comment>
+  </data>
+  <data name="hint_appcode" xml:space="preserve">
+    <value>App Code/Key</value>
+  </data>
+  <data name="hint_username" xml:space="preserve">
+    <value>用户名</value>
+  </data>
+  <data name="hint_password" xml:space="preserve">
+    <value>密码</value>
+  </data>
 </root>
