--- a/SimpleWeather.UWP.Shared/Strings/en/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/en/Resources.resw
@@ -690,6 +690,10 @@
   <data name="time_current" xml:space="preserve">
     <value>Current</value>
   </data>
+  <data name="label_nodata" xml:space="preserve">
+    <value>NO DATA</value>
+    <comment>Forecast Graphs</comment>
+  </data>
   <data name="api_tomorrowio" xml:space="preserve">
     <value>Tomorrow.io</value>
   </data>
@@ -711,8 +715,5 @@
   </data>
   <data name="hint_password" xml:space="preserve">
     <value>Password</value>
-  </data>
-  <data name="label_nodata" xml:space="preserve">
-    <value>NO DATA</value>
   </data>
 </root>
