--- a/SimpleWeather.UWP.Shared/Strings/de/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/de/Resources.resw
@@ -713,6 +713,10 @@ Fuzzy</comment>
   <data name="time_current" xml:space="preserve">
     <value>Aktuell</value>
   </data>
+  <data name="label_nodata" xml:space="preserve">
+    <value>KEINE DATEN</value>
+    <comment>Forecast Graphs</comment>
+  </data>
   <data name="api_tomorrowio" xml:space="preserve">
     <value>Tomorrow.io</value>
   </data>
