--- a/SimpleWeather.UWP.Shared/Strings/fr/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/fr/Resources.resw
@@ -691,6 +691,10 @@ Fuzzy</comment>
   <data name="time_current" xml:space="preserve">
     <value>Actuel</value>
   </data>
+  <data name="label_nodata" xml:space="preserve">
+    <value>PAS DE DONNÉES</value>
+    <comment>Forecast Graphs</comment>
+  </data>
   <data name="api_tomorrowio" xml:space="preserve">
     <value>Tomorrow.io</value>
   </data>
