--- a/SimpleWeather.UWP.Shared/Strings/pl/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/pl/Resources.resw
@@ -694,6 +694,10 @@ Fuzzy</comment>
   <data name="time_current" xml:space="preserve">
     <value>Aktualny</value>
   </data>
+  <data name="label_nodata" xml:space="preserve">
+    <value>BRAK DANYCH</value>
+    <comment>Forecast Graphs</comment>
+  </data>
   <data name="api_tomorrowio" xml:space="preserve">
     <value>Tomorrow.io</value>
   </data>
